--- a/src/bib.bib
+++ b/src/bib.bib
@@ -8068,6 +8068,7 @@ OPTpages={3610-3624},
 author = {Wan, Hui and Rasch, Philip J. and Taylor, Mark A. and Jablonowski, Christiane},
 title = {Short-term time step convergence in a climate model},
 journal = james,
+year = {2015},
 volume = {7},
 number = {1},
 pages = {215-225},
@@ -8075,4 +8076,40 @@ doi = {10.1002/2014MS000368},
 url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014MS000368},
 eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2014MS000368}
 }
+
+
+
+
+
+
+
+@article{TF2018JC,
+author = {Trenberth, Kevin E. and Fasullo, John T.},
+title = {Applications of an Updated Atmospheric Energetics Formulation},
+journal = jc,
+volume = {31},
+number = {16},
+pages = {6263-6279},
+year = {2018},
+doi = {10.1175/JCLI-D-17-0838.1}
+}
+
+
+
+
+
+
+
+
+@article{GetAl2018MWR,
+author = {Gross, Markus and Wan, Hui and Rasch, Philip J. and Caldwell, Peter M. and Williamson, David L. and Klocke, Daniel and Jablonowski, Christiane and Thatcher, Diana R. and Wood, Nigel and Cullen, Mike and Beare, Bob and Willett, Martin and Lemarié, Florian and Blayo, Eric and Malardel, Sylvie and Termonia, Piet and Gassmann, Almut and Lauritzen, Peter H. and Johansen, Hans and Zarzycki, Colin M. and Sakaguchi, Koichi and Leung, Ruby},
+title = {Physics–Dynamics Coupling in weather, climate and Earth system models: Challenges and recent progress},
+journal = mwr,
+volume = {0},
+number = {0},
+pages = {null},
+year = {0},
+doi = {10.1175/MWR-D-17-0345.1}
+}
+
 
