--- a/src/energy.tex
+++ b/src/energy.tex
@@ -474,7 +474,7 @@ Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{
   \end{sidewaystable}
 \section{Results}
 \label{sec:results}
-A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}). All simulations are at nominally $\sim 1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes and 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
+A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}). All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes and 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
 \begin{itemize}
 \item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS}. 
 \item {\em{QPC6}}: The QPC6 configuration refers to an aqua-planet setup using CAM6 physics; i.e. an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES}. 
@@ -749,7 +749,7 @@ A purpose of this paper is to encourage modeling groups to perform similar analy
 
 
 \acknowledgments
-The National Center for Atmospheric Research is sponsored by the National Science Foundation. We thank NCAR's Computational and Information Systems Laboratory (CISL) and NCAR's Climate and Global Dynamics division (CGD) for computational resources. The data used to perform the energy analysis and associated scripts can be found on {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
+The National Center for Atmospheric Research is sponsored by the National Science Foundation. We thank NCAR's Computational and Information Systems Laboratory (CISL) and NCAR's Climate and Global Dynamics division (CGD) for computational resources. The data used to perform the energy analysis can be found on {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
 
 %We thank two anonymous reviewers for their helpful comments and time put into reviewing this very long/technical paper. Herrington, Reed and Lauritzen are grateful to the NCAR Advance Study Program graduate visitor program for funding Herrington's 9-month visit to NCAR. We thank NCAR's Computational and Information Systems Lab (CISL) for providing computing support. Goldhaber was partially supported by the U.S. Department of Energy Office of Biological and Environmental Research, Work Package 12-015334 ``Multiscale Methods for Accurate, Efficient, and Scale-Aware Models of the Earth System''. Medeiros acknowledges support by the Regional and Global Climate Modeling Program of the U.S. Department of Energy's Office of Science,  Cooperative Agreement DE-FC02-97ER62402. Benedict was funded by National Science Foundation (NSF) Rapid Response Research (RAPID) award AGS-1547910. The data presented in this manuscript is available at {\url{https://github.com/PeterHjortLauritzen/2017-JAMES-CESM2-SE.git}}.
 
