--- a/src/energy.tex
+++ b/src/energy.tex
@@ -135,8 +135,19 @@
 
 % Example: 
  \begin{keypoints}
- \item A detailed total energy analysis of CAM is given
- \item Total energy analysis in simplified setups (such as Aqua-planet or Held-Suarez) does not give an accurate picture of TE dissipation in AMIP-type simulations
+ \item Dynamical core spurious TE dissipation is $-0.3W/m^2$ to $-1W/m^2$ at 1 degree
+ \item Constant-pressure assumption in physics leads to $0.3W/m^2$ spurious TE source
+ \item There can easily be compensating errors in TE budget
+
+% \item Limiters on vertical remapping increase TE dissipation to $-0.2W/m^2$
+% \item Moist physics forcing increases spurious TE  dissipation in dynamical core
+
+% \item Physics-dynamics coupling can lead to $0.5W/m^2$ spurious TE source
+% \item Physics-dynamics coupling can lead to noisy solutions for large physics time-steps
+% \item Vertical remapping TE dissipation is $-0.01W/m^2$
+%
+
+% \item Total energy analysis in simplified setups (such as aqua-planet or Held-Suarez) does not give an accurate picture of TE dissipation in AMIP-type simulations
 
 % \item	List up to three key points (at least one is required)
 % \item	Key Points summarize the main points and conclusions of the article
@@ -167,7 +178,9 @@
 %% \begin{abstract} starts the second page 
 
 \begin{abstract}
-A closed total energy (TE) budget is of upmost importance in coupled climate system modeling; in particular, the dynamical core or physics-dynamics coupling should not lead to spurious TE sources/sinks. To assess this in a global climate model, a detailed analysis of the spurious sources/sinks of TE in NCAR's Community Atmosphere Model (CAM) is given. This includes spurious total energy changing steps in the parameterization suite, the dynamical core, energy formula discrepancies and physics-dynamics coupling.  The latter leads to a  detailed discussion of the pros and cons of various physics-dynamics coupling methods commonly used in climate/weather modeling. 
+A closed total energy (TE) budget is of utmost importance in coupled climate system modeling; in particular, the dynamical core or physics-dynamics coupling should ideally not lead to spurious TE sources/sinks. To assess this in a global climate model, a detailed analysis of the spurious sources/sinks of TE in NCAR's Community Atmosphere Model (CAM) is given. This includes spurious total energy changing steps in the parameterization suite, the dynamical core, energy formula discrepancies and physics-dynamics coupling.  The latter leads to a  detailed discussion of the pros and cons of various physics-dynamics coupling methods commonly used in climate/weather modeling.  
+
+%It is shown that the dynamical core dissipates energy at $-0.3W/m^2$ to $1W/m^2$ depending on configuration and numerical methods at $1^\circ$ resolution. Most TE dissipation comes viscosity. Shape-preserving limiters on the vertical remapping used in quasi-Lagrangian vertical coordinate models increase TE dissipation of the mapping from $-0.01W/m^2$ $-0.2W/m^2$. TE dissipation in dynamical core increases drastically with rougher topography and the inclusion of moist physics. Hence TE analysis of simplified (in particular dry) setups does not necessarily provide a good estimate of the TE budget under `real-world' conditions. Physics-dynamics coupling can be a $0.5W/m^2$ TE source and the constant-pressure assumption along with the requirement for a closed mass budget leads to a $0.3W/m^2$ TE source.
 \end{abstract}
 
 
@@ -531,9 +544,9 @@ To assess the TE errors due to the discrepancy in the energy formula used by dyn
 %{\color{red}{Note sure if we should add this section: `HOMME' configuration (no reference level subtraction in pressure level thickness damping and increased divergence damping) - in this configuration $\partial \gi{E}^{(adiab)}_{dyn}$ is 0.1$W/m^2$ - dycore is source of TE energy!!!! Solutions are very very noisy over orography so that could be a spurious source of TE i.e. not a `realistic' configuration. If we will use this configuration we should use smoother topography ...}}
 
 \subsection{{\em{QPC6}}: Simplified surface}\label{sec:QPC6}
-By running the model in Aqua-planet configuration one can assess the effect simplifying the surface boundary condition. In particular, without topography forcing the dynamical core is not challenged with respect to stationary near-grid-scale forcing. The TE tendency with respect to pressure work remains the same $\partial \gi{E}_{phys}^{({pwork})}$ as the AMIP-type simulations, however, the adiabatic dynamical core TE tendency reduces to $\partial \gi{E}_{dyn}^{({adiab})}=-0.14 W/m^2$ (approximately a factor 4 reduction). Most of that reduction is due to viscosity $\partial \gi{E}_{dyn}^{(hvis)}=-0.13 W/m^2$. The frictional heating is roughly the same as AMIP $\partial \gi{E}_{dyn}^{(fheat)}=0.48 W/m^2$ as is the vertical remapping  $\partial \gi{E}_{dyn}^{(remap)}=-0.01 W/m^2$. To evaluate the dynamical cores diffusion of TE it is therefore important to asses the model in a configuration with topography as the wave dynamics generated by topography leads to more active diffusion operators.
+By running the model in aqua-planet configuration one can assess the effect simplifying the surface boundary condition. In particular, without topography forcing the dynamical core is not challenged with respect to stationary near-grid-scale forcing. The TE tendency with respect to pressure work remains the same $\partial \gi{E}_{phys}^{({pwork})}$ as the AMIP-type simulations, however, the adiabatic dynamical core TE tendency reduces to $\partial \gi{E}_{dyn}^{({adiab})}=-0.14 W/m^2$ (approximately a factor 4 reduction). Most of that reduction is due to viscosity $\partial \gi{E}_{dyn}^{(hvis)}=-0.13 W/m^2$. The frictional heating is roughly the same as AMIP $\partial \gi{E}_{dyn}^{(fheat)}=0.48 W/m^2$ as is the vertical remapping  $\partial \gi{E}_{dyn}^{(remap)}=-0.01 W/m^2$. To evaluate the dynamical cores diffusion of TE it is therefore important to asses the model in a configuration with topography as the wave dynamics generated by topography leads to more active diffusion operators.
 \subsection{{\em{FHS94}}: Simplified physics (no moisture)}\label{sec:FHS94}
-Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as no moisture, the TE diffusion in the dynamical core decreases even further to $\sim 0.002W/m^ss$. Hyperviscosity is less active leading to significant reductions compared to Aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the Aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
+Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as no moisture, the TE diffusion in the dynamical core decreases even further to $\sim 0.002W/m^ss$. Hyperviscosity is less active leading to significant reductions compared to aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
 \subsection{{\em{CAM-FV}}: Changing dynamical core to Finite-Volume (FV)}\label{sec:cam-fv}
 As a comparison the TE dissipation characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical and can therefore activated with CAM-FV. The CAM-FV dynamical core uses state-updates physics-dynamics coupling {\tt{ftype=1}} ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE dissipation of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. We do not have the break-down of $\partial \gi{E}^{(adiab)}_{dyn}$ so it can not be determined how much TE dissipation is due to the vertical remapping. Also, CAM-FV uses intrinsic dissipation operators (limiters in the flux operators) making it difficult to break-down the TE budget in the dynamical core. Note that the pressure work even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
 \subsection{{\em{CAM-SE-CSLAM}}: Quasi equal-area physics grid}\label{sec:cslam}
@@ -575,9 +588,9 @@ This configuration was discussed in the context of element noise in section \ref
 \section{Conclusions}\label{sec:concl}
 A detailed total energy (TE) analysis of the Community Atmosphere Model (CAM) based on the spectral-element (SE) dynamical core and CAM version 6 physics (part of the CESM2.1 release) has been presented. In the global climate model there can be many spurious contributions to the TE budget. These errors can be divided into four categories: physical parameterizations, adiabatic dynamical core, the coupling between physics and dynamics, and TE definition discrepancies between dynamics and physics. The latter is not by design but through the evolutionary nature of model development. By capturing the atmospheric state at various locations in the model algorithm, a detailed budget of TE errors can be constructed. All the spurious TE energy errors are corrected for with a global energy fixer (in terms of a global uniform temperature increment) every physics time-step.
 
-In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that surface pressure is constant. The surface pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work). The pressure work with the full moist physics is very stable across different configurations at $\sim 0.3W/m^2$, The dissipation of the SE dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE dissipation is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of five if no topography is present $\sim -0.1W/m^2$ at all (aqua-planet setup). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim 0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim 1W/m^2$. 
+In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that surface pressure is constant. The surface pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work). The pressure work with the full moist physics configuration is very stable across different configurations at $\sim 0.3W/m^2$, The dissipation of the SE dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE dissipation is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of five if no topography is present $\sim -0.1W/m^2$ at all (aqua-planet setup). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim 0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim 1W/m^2$. 
 
-By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim 0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating) and it remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated wit physics-dynamics coupling are approximately $0.5W/m^2$ which is roughly the same as the TE discrepancy errors (if present).
+By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim 0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating) and it remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continous equation of motion conserve a mode comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source.
 
 A purpose of this paper is to encourage modeling groups to perform similar analysis to better understand the total energy flow in Earth system models. As has been demonstrated in this paper there can easily be compensating errors in the system which can not be identified without a detailed TE analysis.
 
